flexiblepos doc updated with installation

--- a/index.html
+++ b/index.html
@@ -180,8 +180,7 @@
 	<h1>Installation Process</h1><hr class="notop">
 	<h3>Pre-Requirements</h3>
 	<ul>
-		<li class="vimportant">Create a new database , Make sure database is completely blank. Import the flexiblepos_db.sql in the created database without error.</li>
-		<li class="vimportant">if you install it in subdirectory ,change the subdirectory value in config.php . <code>define('SUBDIRECTORY', 'FlexiblePos');</code> </li>
+		<li class="vimportant">Create a new database , Make sure database is completely blank.</li>
 		<li>The maximum execution time of your server can't be less than 5 minutes. You may update php.ini file for this</li>
 		<li>To get Installation service from our Expert Support Team contact us at flexibledesign01@gmail.com </li>
 	</ul>
@@ -219,11 +218,14 @@
 
 	<h3>2nd : Follow this step</h3>
 	<ul>
-		<li><em>You must need to import the flexiblepos_db.sql file in your newly created database.</em></li>
-		<li>Go to your project directory and Rename the database name, database user, database password in .env file.
-			<img src="assets/images/env_changes.jpg" alt="">
+		
+		<li>Go to your project directory and follow the steps
+			<img src="assets/images/install1.jpg" alt="">
 		</li>
-		<li>Visit <a href="http://localhost/FlexiblePos/" target="_blank">This link</a> here you will get Login form, where you can login with user: <b>admin@flexibleit.net</b> pass: <b>password</b>.
+		<li><em>You must need to write the database name, database user, database user password, codecanyon username and codecanyone purchase code. Click on submit to complete. This step will take few minutes, please wait untill complete.</em>
+			<img src="assets/images/install4.png" alt="">
+		</li>
+		<li>After successful installation you will be redirected to login page. Here you will get Login form, where you can login with user: <b>admin@flexibleit.net</b> pass: <b>password</b>.
 			<img src="assets/images/login.jpg" alt="">
 		</li>
 		<li>Visit  http://YOURDOMAIN.COM/( if you install it on online server). If you install sub directory then the directory is http://YOURDOMAIN.COM/subdirectory.
@@ -347,6 +349,16 @@
 		<li>After clicking complete button you can see the print page. You can print it by clicking on print button.</li>
 	</ul>
 	<img src="assets/images/create_sale.png" alt="">
+	<h3>Edit Sales/Invoice</h3><hr class="notop">
+	<ul>
+		<li> You can edit sales and you can add more products and payment</li>
+		<li> Can change customers</li>
+	</ul>
+	<h3>Hold Sales/Invoice</h3><hr class="notop">
+	<ul>
+		<li> You can Hold sales temporary</li>
+		<li> Can edit the sales later and confirm</li>
+	</ul>
 </section>
 <!-- product transfer part end -->
 
